<resources>
    <string name="app_name">TAPDiscos</string>
    <string name="album_title_placeholder">Nombre del álbum</string>
    <string name="album_artist_placeholder">Nombre del artista</string>
    <string name="album_genre_placeholder">Género del álbum</string>
    <string name="album_release_placeholder">2018</string>

    <string name="album_create">New Album</string>
    <string name="action_settings">Settings</string>
    <string name="hint_artist">Artist</string>
    <string name="hint_title">Album title</string>
    <string name="hint_release">Year of Release</string>
    <string name="hint_genre">Genre</string>
    <string name="hint_cover">Album Cover URL</string>
    <string name="btn_submit">Submit</string>
</resources>
