<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="368dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/albumTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/albumCoverImageView"
                android:text="@string/album_title_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toEndOf="@+id/albumCoverImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/albumCoverImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/albumArtistTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/albumCoverImageView"
                android:text="@string/album_artist_placeholder"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                app:layout_constraintStart_toStartOf="@+id/albumTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/albumTitleTextView" />

            <TextView
                android:id="@+id/albumGenreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_genre_placeholder"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintStart_toStartOf="@+id/albumArtistTextView"
                app:layout_constraintTop_toBottomOf="@+id/albumArtistTextView" />

            <TextView
                android:id="@+id/albumReleaseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/album_release_placeholder"
                app:layout_constraintStart_toEndOf="@+id/albumGenreTextView"
                app:layout_constraintTop_toBottomOf="@+id/albumArtistTextView" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>